welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:65: error: not found: value growflowers1
	growflowers1()
        ^FlowerCase:73: error: not found: value growflowers1
	growflowers1()
        ^