welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def marquersol(c:Color) = {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
val j:Color = Color.YELLOW

def fleur(c:Color) ={
	marquersol(c)
	gauche()
	avance()
	droite()
	avance()
	marquersol(c)
	avance()
	droite()
	avance()
	marquersol(c)
	avance()
	droite()
	avance()
	marquersol(c)
	droite()
	avance()
	marquersol(j)
}

def growFlowers2(){
	fleur(Color.RED)
	droite()
	avance(3)
	fleur(Color.CYAN)
	recule(2)
	gauche()
	avance(3)
	droite()
	droite()
	fleur(Color.ORANGE)
	recule(2)
	droite()
	avance()
	fleur(Color.GREEN)
	droite()
	recule(5)
	fleur(Color.PINK)
	droite()
	recule()
}
def growFlowers1(){
growFlowers2()
avance(6)
gauche()
avance(2)
droite()
fleur(Color.BLUE)
droite()
avance()
gauche()
avance(2)
droite()
growFlowers2()}

def growflowers(){
	growflowers1()
	gauche()
	recule()
	droite()
	recule(8)
	droite()
	avance(3)
	gauche()
	growflowers1()
}
